--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,14 @@
 {
-	"name": "batuhan/laravel-flagable",
-	"description": "Trait for Laravel Eloquent models to allow easy implementation of a 'like' or 'favorite' or 'remember' feature.",
+	"name": "batuhan/laravel-flaggable",
+	"description": "Trait for Laravel Eloquent models to allow easy implementation of a 'flag' feature.",
 	"license": "MIT",
 	"homepage": "https://smartersoftware.net/packages/laravel-likeable-favorite",
-	"keywords": ["trait", "laravel", "eloquent", "likeable", "likable", "like", "remember", "follow", "favorite", "favourite"],
+	"keywords": ["trait", "laravel", "eloquent", "likeable", "likable", "like", "remember", "follow", "flag", "favorite", "favourite"],
 	"authors": [
+		{
+			"name": "Batuhan Icoz",
+			"email": "i@bt.hn"
+		},
 		{
 			"name": "Robert Conner",
 			"email": "rtconner@smarter.bz"
